# sample-rspymodule

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yaml
cli/: lib.rs
python/sample_rspymodule/: __init__.py  module.py
src/: lib.rs
src/sample_rspymodule/: __init__.py  module.py
