[project]
name = "sample-rspymodule"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sonokawa Hayato", email = "SONOKAWA.Hayato@nims.go.jp" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.9"
license = { text = "MIT" }

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = []

[tool.maturin]
python-source = "python"
module-name = "sample_rspymodule._lowlevel"
features = ["pyo3/extension-module"]
